--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.6",
-    "@angular/common": "^6.1.6",
+    "@angular/common": "^7.2.10",
     "@angular/compiler": "^6.1.6",
     "@angular/core": "^6.1.6",
     "@angular/forms": "^6.1.6",
@@ -69,9 +69,9 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.5",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.6",
+    "@angular/compiler-cli": "^7.2.12",
     "@angular/language-service": "^6.1.6",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
@@ -79,7 +79,7 @@
     "codelyzer": "^4.4.4",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.2",
     "karma-jasmine": "^1.1.2",
@@ -87,7 +87,7 @@
     "protractor": "5.4.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.2.4"
   },
   "engines": {
     "node": ">= 8.9.4",
