--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@angular/platform-browser": "^6.1.6",
     "@angular/platform-browser-dynamic": "^6.1.6",
     "@angular/router": "^6.1.6",
-    "@coreui/angular": "^2.0.0-rc.1",
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
-    "@coreui/coreui-pro": "^2.0.6",
+    "@coreui/angular": "^2.4.5",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.0",
+    "@coreui/coreui-pro": "^2.1.8",
     "@coreui/icons": "0.3.0",
     "angular-calendar": "^0.25.2",
     "angular2-datatable": "^0.6.0",
@@ -75,11 +75,12 @@
     "@angular/cli": "^6.1.5",
     "@angular/compiler-cli": "^6.1.6",
     "@angular/language-service": "^6.1.6",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.9.4",
+    "@types/node": "^10.14.4",
     "codelyzer": "^4.4.4",
-    "jasmine-core": "^3.2.1",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
