--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "styles": [
               "node_modules/@coreui/icons/css/coreui-icons.css",
               "node_modules/flag-icon-css/css/flag-icon.css",
-              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/simple-line-icons/css/simple-line-icons.css",
               "src/scss/style.scss"
             ],
@@ -31,6 +31,7 @@
               "includePaths": ["./node_modules"]
             },
             "scripts": [
+              "node_modules/@fortawesome/fontawesome-free/js/all.js",
               "node_modules/chart.js/dist/Chart.min.js"
             ]
           },
