--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "angular2-ladda": "2.0.0",
     "angular2-text-mask": "^8.0.4",
     "angular2-toaster": "6.1.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.0.0-beta.2",
     "chart.js": "2.7.2",
     "core-js": "2.5.7",
     "flag-icon-css": "3.0.0",
