--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "core-js": "2.5.7",
     "flag-icon-css": "3.0.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "moment": "2.22.2",
     "mutationobserver-shim": "^0.3.2",
     "ng-select": "^1.0.0",
