--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ng2-charts": "1.6.0",
     "ng2-dragula": "^1.5.0",
     "ngx-bootstrap": "3.0.1",
+    "ngx-mat-select-search": "^1.7.2",
     "ngx-perfect-scrollbar": "6.3.0",
     "ngx-quill": "^3.4.0",
     "ngx-quill-editor": "^2.2.2",
