--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               ]
             },
             "scripts": [
+              "node_modules/jquery/dist/jquery.js",
               "node_modules/@fortawesome/fontawesome-free/js/all.js",
               "node_modules/chart.js/dist/Chart.min.js"
             ]
@@ -83,6 +84,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/@fortawesome/fontawesome-free/js/all.js",
               "node_modules/chart.js/dist/Chart.min.js"
             ],
             "styles": [
