--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.0",
     "@coreui/coreui-pro": "^2.1.8",
     "@coreui/icons": "0.3.0",
+    "@types/jquery": "^3.3.29",
     "angular-calendar": "^0.25.2",
     "angular2-datatable": "^0.6.0",
     "angular2-ladda": "2.0.0",
@@ -54,6 +55,7 @@
     "flag-icon-css": "3.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "moment": "2.22.2",
     "mutationobserver-shim": "^0.3.2",
     "ng-select": "^1.0.0",
