--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@coreui/coreui-pro": "^2.1.8",
     "@coreui/icons": "0.3.0",
     "@types/jquery": "^3.3.29",
+    "angular-2-daterangepicker": "^1.1.52",
     "angular-calendar": "^0.25.2",
+    "angular-file": "^1.1.1",
     "angular2-datatable": "^0.6.0",
     "angular2-ladda": "2.0.0",
     "angular2-text-mask": "^8.0.4",
@@ -87,7 +89,7 @@
     "codelyzer": "^4.4.4",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.2",
     "karma-jasmine": "^1.1.2",
