--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "angular-2-daterangepicker": "^1.1.52",
     "angular-calendar": "^0.25.2",
     "angular-file": "^1.1.1",
+    "angular-user-idle": "^2.1.2",
     "angular2-datatable": "^0.6.0",
     "angular2-ladda": "2.0.0",
     "angular2-text-mask": "^8.0.4",
